added implementation for linking pages.

--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -5,7 +5,7 @@
 <head th:replace="layouts :: header"></head>
 <body>
 
-<nav th:replace="layouts :: foo"></nav>
+<nav th:replace="layouts :: navbar"></nav>
 
 <div class="container">
     <form action="/projects/save" th:object="${project}" method="POST">
