--- a/src/main/resources/templates/projects/list-projects.html
+++ b/src/main/resources/templates/projects/list-projects.html
@@ -2,14 +2,24 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layouts :: header"></head>
+<head th:replace="layouts :: head">
+</head>
+
 <body>
+
 <nav th:replace="layouts :: navbar"></nav>
 
-<div>
-    <h4>Current Project</h4>
-    <table>
-        <thead>
+<div class="container">
+    <h3>Projects Directory</h3>
+    <hr>
+
+    <!--  Add New Project Button -->
+    <a th:href="@{/projects/new}"
+       class="btn btn-primary btn-sm mb-3">
+        New Project
+    </a>
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
         <tr>
             <th>Project Name</th>
             <th>Project Stage</th>
@@ -21,6 +31,7 @@
             <td th:text="${aProject.stage}"/>
         </tr>
         </tbody>
+
     </table>
 </div>
 </body>
