--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -23,6 +23,11 @@
         </tbody>
     </table>
 </div>
+<div class="col-md-4">
+    <canvas id="myPieChart" height="50" width="50"></canvas>
+</div>
+
+<script type="text/javascript" th:src="@{js/myChart.js}"></script>
 </body>
 
 </html>
