--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -21,7 +21,7 @@
 
         <select th:field="*{employees}" multiple="multiple">
             <option th:each="employee : ${allEmployees}"
-                    th:value="${employee.employeeId}"
+                    th:value="${employee.employee_id}"
                     th:text="${employee.firstName}">
             </option>
         </select>
