--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -6,26 +6,61 @@
 <body>
 <nav th:replace="layouts :: navbar"></nav>
 
-<div>
-    <h4>Current Project</h4>
-    <table>
-        <thead>
-        <tr>
-            <th>Project Name</th>
-            <th>Project Stage</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="aProject : ${projects}">
-            <td th:text="${aProject.name}"/>
-            <td th:text="${aProject.stage}"/>
-        </tr>
-        </tbody>
-    </table>
+<div class="container">
+
+    <h3>Main Dashboard</h3>
+    <hr>
+    <h4>Current Projects</h4>
+    <div class="row">
+        <div class="col-md-6">
+
+            <table class="table table-border table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Project Name</th>
+                    <th>Project Stage</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="aProject : ${projects}">
+                    <td th:text="${aProject.name}"/>
+                    <td th:text="${aProject.stage}"/>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-4">
+            <canvas id="myPieChart" height="50" width="50"></canvas>
+        </div>
+    </div>
+
 </div>
-<div class="col-md-4">
-    <canvas id="myPieChart" height="50" width="50"></canvas>
+
+<div class="container">
+    <h4>Current Employees</h4>
+    <div class="row">
+        <div class="col-md-6">
+
+            <table class="table table-border table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email Address</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="aEmployee : ${employees}">
+                    <td th:text="${aEmployee.firstName}"/>
+                    <td th:text="${aEmployee.lastName}"/>
+                    <td th:text="${aEmployee.email}"/>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
 
 <script type="text/javascript" th:src="@{js/myChart.js}"></script>
 </body>
